src/test/ui/asm/rustfix-asm.stderr
error: the legacy LLVM-style asm! syntax is no longer supported
  --> $DIR/rustfix-asm.rs:11:9
   |
LL |         asm!("" :: "r" (x));
   |         ----^^^^^^^^^^^^^^^
   |         |
   |         help: replace with: `llvm_asm!`
   |
   = note: consider migrating to the new asm! syntax specified in RFC 2873
   = note: alternatively, switch to llvm_asm! to keep your code working as it is

error: the legacy LLVM-style asm! syntax is no longer supported
  --> $DIR/rustfix-asm.rs:13:9
   |
LL |         asm!("" : "=r" (y));
   |         ----^^^^^^^^^^^^^^^
   |         |
   |         help: replace with: `llvm_asm!`
   |
   = note: consider migrating to the new asm! syntax specified in RFC 2873
   = note: alternatively, switch to llvm_asm! to keep your code working as it is

error: aborting due to 2 previous errors

